<resources>
    <string name="app_name">Contact\'s Application</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="name_text">Name:</string>
    <string name="email_text">Email:</string>
    <string name="delete">Delete</string>
    <string name="phone_text">Phone:</string>
    <string name="type_text">Type:</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="enter_type">Enter Type</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_name">Enter Name</string>
</resources>